--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="stile.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +11,44 @@
 </head>
 
 <body>
- 
-<header>
-    <img src="img/logo.svg">
-</header>    
+    <!-- superiore -->
+    <header>
+        <img src="img/logo.svg">
+    </header>    
+    <!-- titolo e autore -->
+    <div class="titolo">
+        <h1>
+            Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee
+        </h1>
+        <p class="autor">
+            Scritto da <span>The Booleaner</span>
+        </p>
+        <p class="date">
+            il 10/10/2020
+        </p>
+    </div>
+    <!-- foto di tim (tim è davvero un bell uomo) -->
+    <section class="FOTOTIm">
+        <!-- <div class="foto"> -->
+            <img src="img/tim-1.jpg">
+        <!-- </div> -->
+        
+        <!-- <div class="foto"> -->
+            <img src="img/tim-2.jpg">
+        <!-- </div> -->
+        
+        <p>
+            <caption>
+                1st Photo: jhon S.and James L:Knight Foundation,by Scott Henrichsen
+            </caption>
+            </p>
+        <p>                
+            <caption>
+                2nd Photo: Wikimedia by Paul Clarke
+            </caption>
+        </p>
+    </section>
+
 
 </body>
 </html>
