--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing aswaganda steve watchoski steve watchoski steve watchoski steve watchoski steve watchoski steve watchoski </li>
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing aswaganda steve watchoski steve watchoski steve watchoski steve watchoski steve watchoski steve watchoski </li>
             </ul>
-
+            <!-- CI HO PROVATO VERAMENTE IN TUTTE LE LINGUE
+            MA NON SONO RIUSCITO AD ALLINEARE IN VERTICALE STE TABELLE -->
             <!-- tabella -->
             <div class="tabelle">
 
@@ -137,10 +138,15 @@
                 </h2>
                 <div class="footerpic">
                     
-                    <div class="img">
-                        <img src="img/monitor.jpg" alt="">
+                    <div>
+                        <img src="img/monitor.jpg">
+                        <span>lorem ipsum dolor</span>
                     </div>
-                    <span>lorem ipsum dolor</span>
+
+                    <div>
+                        <img src="img/graph.jpg">
+                        <span>lorem ipsum dolor</span>
+                    </div>
 
                 </div>
                 
