lastcommit con testo evidenziato

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </div>
 
             <p class="loremp">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum mollitia laboriosam labore dolore aperiam dolor debitis culpa expedita cupiditate fugit totam provident laudantium numquam dolores ipsam eveniet, placeat voluptatibus! Eius. Lorem, ipsum dolor sit amet consectetur adipisicing elit. A eos hic enim accusantium voluptatem sint cupiditate excepturi provident facere, vitae, iusto eveniet in iste dolorum at quasi impedit commodi sit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti unde necessitatibus libero voluptate corrupti sed, rem eveniet! Deserunt dolorum quos iusto. Rem blanditiis cumque quas. Suscipit possimus nostrum ut odio?
+                Lorem ipsum dolor sit amet consectetur adipisicing <span class="evidenzio">elit. Dolorum mollitia laboriosam labore dolore aperiam dolor debitis cul</span>pa expedita cupiditate fugit totam provident laudantium numquam dolores ipsam eveniet, placeat voluptatibus! Eius. Lorem, ipsum dolor sit amet consectetur adipisicing elit. A eos hic enim accusantium voluptatem sint cupiditate excepturi provident facere, vitae, iusto eveniet in iste dolorum at quasi impedit commodi sit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti unde necessitatibus libero voluptate corrupti sed, rem eveniet! Deserunt dolorum quos iusto. Rem blanditiis cumque quas. Suscipit possimus nostrum ut odio?
             </p>
 
             <footer>
